--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "split-pay",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@types/react-dom": "^16.8.4",
     "classnames": "2.2.6",
